fixed fonts/overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -258,7 +258,7 @@ header {
   }
 
   .previewName {
-    font-family: 'SFUIDisplay-Semibold';
+    font-family: 'SFUIDisplay-Semibold', 'Helvetica', sans-serif;;
     font-size: 22px;
     font-weight: 600;
     font-style: normal;
@@ -270,7 +270,7 @@ header {
   }
 
   .previewDescription {
-    font-family: 'SFUIText-Regular';
+    font-family: 'SFUIText-Regular', 'Helvetica', sans-serif;;
     font-size: 16px;
     font-weight: normal;
     font-style: normal;
@@ -292,7 +292,7 @@ header {
   }
 
   .previewPrice {
-    font-family: 'SFUIDisplay-Bold';
+    font-family: 'SFUIDisplay-Bold', 'Helvetica', sans-serif;;
     font-size: 16px;
     font-weight: bold;
     font-style: normal;
@@ -303,7 +303,7 @@ header {
   }
 
   .previewTags {
-    font-family: 'SFUIText-Regular';
+    font-family: 'SFUIText-Regular', 'Helvetica', sans-serif;;
     font-size: 16px;
     font-weight: normal;
     font-style: normal;
